.g8s/eutonies.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eutonies
spec:
  type: NodePort
  selector:
    app: eutonies
  ports:
    - port: 80
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: http-eutonies
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      nodePort: 30008
      name: svc-eutonies
