.g8s/eutonies.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eutonies-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/location-snippet: |
      proxy_set_header X-Forwarded-Proto https;
      server_name   eutonies.com *.eutonies.com;      

      $malarkey_profile_token = $arg_malarkeyprofiletoken;
      if $malarkey_profile_token != nil then 
         set_header Malarkey-Profile-Token $malarkey_profile_token
      $malarkey_identity_token = $arg_malarkeyidentitytoken;
      if $malarkey_profile_token != nil then 
         set_header Malarkey-Identity-Token $malarkey_identity_token

    nginx.ingress.kubernetes.io/server-snippet: |
        set $agentflag 0;

        if ($http_user_agent ~* "(Mobile)" ){
          set $agentflag 1;
        }



spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /sune-does/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: sunedoes
            port: 
              number: 80

      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: eutonies
            port: 
              number: 80
